examples/kubeflow-guide/cluster-setup/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker-d
  namespace: default
  labels:
    app: kafka-broker
spec:
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
      - name: kafka-broker
        image: confluentinc/cp-kafka:6.2.0
        ports:
        - name: kafka-broker
          containerPort: 9092
          protocol: TCP
        - name: kafka-external
          containerPort: 29092
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: kafka-broker
    port: 29092
    targetPort: kafka-external
  selector:
    app: kafka-broker
